# focus-video

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.codex/skills/superpowers/: SKILL.md
.codex/skills/superpowers/agents/: openai.yaml
cmake/toolchains/: mingw64.cmake
docs/: architecture.md  roadmap.md  windows-package.md
scripts/: install_runtime_deps_ubuntu.sh  package_windows_zip.sh  smoke_ffmpeg_decode.sh  smoke_local_playback.sh  validate_superpowers_skill.py
src/: focus_video.cpp  focus_video.hpp  image_super_resolution.cpp  image_super_resolution.hpp  main.cpp  runtime_capabilities.cpp  runtime_capabilities.hpp  video_pipeline.cpp  video_pipeline.hpp
tests/: test_image_super_resolution.cpp  test_profiles.cpp  test_runtime_capabilities.cpp  test_video_pipeline.cpp
